Fixing layout issues and improving UX in sequencer

--- a/src/assets/styles/components/kits/user-kit-details.scss
+++ b/src/assets/styles/components/kits/user-kit-details.scss
@@ -19,7 +19,7 @@
   }
 }
 
-.selected {
+.user-kit-details .selected {
   box-shadow: inset 0 0 0 2px rgb(189, 177, 189) !important;
 }
 
